--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native-web": "^0.11.4",
     "react-navigation": "^4.0.4",
     "react-navigation-stack": "^1.7.2",
-    "react-navigation-tabs": "^2.4.2"
+    "react-navigation-tabs": "^2.4.2",
+    "validate.js": "^0.13.1"
   },
   "devDependencies": {
     "babel-preset-expo": "^6.0.0"
